# Personalized-Parcellation

./: CMakeLists.txt  Parc.cpp  Parc.h  Parcellation.cpp  Parcellation.h  README.md  VavlabAlgortihm2.cxx  main.cxx
